adding Joel's changes

--- a/preamble.tex
+++ b/preamble.tex
@@ -42,7 +42,7 @@
 
 \newcommand{\arxiv}[1]{\href{http://arxiv.org/abs/#1}{\tt arXiv:\nolinkurl{#1}}}
 \newcommand{\doi}[1]{\href{http://dx.doi.org/#1}{{\tt DOI:#1}}}
-\newcommand{\euclid}[1]{\href{http://projecteuclid.org/euclid.cmp/#1}{{\tt at Project Euclid: #1}}}
+\newcommand{\euclid}[1]{\href{http://projecteuclid.org/euclid.cmp/#1}{{\tt #1}}}
 \newcommand{\mathscinet}[1]{\href{http://www.ams.org/mathscinet-getitem?mr=#1}{\tt #1}}
 \newcommand{\googlebooks}[1]{(preview at \href{http://books.google.com/books?id=#1}{google books})}
 
