lots of changes from joel

--- a/preamble.tex
+++ b/preamble.tex
@@ -5,7 +5,7 @@
 \usepackage{amsmath,amssymb,amsfonts,amsthm}
 \usepackage{ifpdf}
 
-\usepackage[all,color]{xy}
+%\usepackage[all,color]{xy}
 \SelectTips{cm}{}
 % This may speed up compilation of complex documents with many xymatrices.
 %\CompileMatrices
