--- a/preamble.tex
+++ b/preamble.tex
@@ -142,7 +142,8 @@
 \newcommand{\selfarrow}{\ensuremath{\smash{\tikz[baseline]{\clip (0,0.36) rectangle (0.48,-0.16); \draw[->] (0,0.2) .. controls (0.6,0.8) and (0.6,-0.6) .. (0,0);}}}}
 
 \newcommand{\Inv}[1]{\operatorname{Inv}\left(#1\right)}
-\newcommand{\Hom}[3]{\operatorname{Hom}_{#1}\left(#2,#3\right)}
+\newcommand{\Homa}[3]{\Hom_{#1}\left(#2,#3\right)}
+\newcommand{\Hom}{\operatorname{Hom}}
 \newcommand{\End}[1]{\operatorname{End}\left(#1\right)}
 \newcommand{\Obj}{\operatorname{Obj}}
 
