drawing some more diagrams

--- a/preamble.tex
+++ b/preamble.tex
@@ -64,6 +64,7 @@
 \newtheorem{defn}[prop]{Definition}         % numbered definition
 \newtheorem*{defn*}{Definition}             % unnumbered definition
 \newtheorem{question}{Question}
+\newtheorem{example}{Example}
 \newtheorem{property}[prop]{Property}
 \newtheorem{axiom}[prop]{Axiom}
 \newtheorem{module-axiom}[prop]{Module Axiom}
